# ternavka

./: .gitignore  LICENSE  ideas.txt  prompts.txt
---/: SubmenuController.h  SubmenuModel.cpp
---/ui/: BaseMenuComponent.cpp  BaseMenuComponent.h  DialogComponent.h  DialogController.cpp  DialogModel.cpp  DialogView.h  MenuSystem.cpp  MenuSystem.h  SpeedDialogController.h  SpeedDialogModel.cpp  SubmenuComponent.h
drawings/: top_panel.dxf  top_panel_horizontal.bak000.dxf  top_panel_horizontal.dxf
firmware/: CMakeLists.txt  CurrentTimeManager.cpp  CurrentTimeManager.h  MCP23S17.cpp  MCP23S17.h  SystemConsts.h  SystemFacade.cpp  SystemFacade.h  main.cpp  main.cpp.ledstest
firmware/---/: SubmenuModel.h
firmware/common/: EncoderMultiplier.h  SystemConsts.h
firmware/configuration/: BaseSettings.h  Configuration.cpp  Configuration.h  EncoderSettings.cpp  EncoderSettings.h  FeedSettings.cpp  FeedSettings.h  StepMotorSettings.cpp  StepMotorSettings.h
firmware/hal/: KeyboardManager.cpp  KeyboardManager.h  LEDManager.cpp  LEDManager.h  MultiDisplayManager.cpp  MultiDisplayManager.h
firmware/infra/settings/: SettingItem.h  SettingsManager.h
firmware/libs/pico-ssd1306/: CMakeLists.txt  ssd1306.c  ssd1306.h
firmware/lowlevel/: MCP23S17.cpp  MCP23S17.h  TCA9548A.cpp  TCA9548A.h
firmware/ui/: BaseMenuComponent.cpp  BaseMenuComponent.h  BaseModel.h  BaseUIController.cpp  BaseUIController.h  BaseUIModel.h  BaseUIView.cpp  BaseUIView.h  BaseView.cpp  BaseView.h  Controller.h  DialogComponent.cpp  DialogComponent.h  DialogController.cpp  DialogController.h  DialogModel.cpp  DialogModel.h  DialogView.cpp  DialogView.h  MenuComponent.cpp  MenuComponent.h  MenuController.cpp  MenuController.h  MenuModel.h  MenuSystem.cpp  MenuSystem.h  MenuView.h  Model.h  SpeedDialogController.cpp  SpeedDialogModel.cpp  SpeedDialogModel.h  SpeedDialogView.cpp  SpeedDialogView.h  SubmenuController.cpp  SubmenuView.cpp  SubmenuView.h  SystemMenu.cpp  SystemMenu.h  View.h
firmware/ui/concrete/: BaseCrossFeedDialogController.cpp  BaseCrossFeedDialogController.h  BaseCrossFeedDialogView.h  BaseCrossFeedMenuController.cpp  BaseCrossFeedMenuController.h  BaseCrossFeedMenuView.h  BaseSettingsDialogController.h  BaseSettingsDialogModel.h  FreeDialogController.cpp  FreeDialogController.h  FreeDialogModel.h  FreeDialogView.cpp  FreeDialogView.h
